--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,6 +11,7 @@ resources.frontController.params.displayExceptions = 1
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.db.adapter = "PDO_MYSQL"
 resources.db.params.host = "localhost"
+resources.db.params.charset = "utf8"
 resources.db.params.dbname= "shop"
 resources.db.params.username = "root"
 resources.db.params.password = ""
@@ -24,3 +25,5 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
+
