--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,22 +8,33 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 1
 
+resources.session.save_path = APPLICATION_PATH "/data/session"
+resources.session.use_only_cookies = true
+resources.session.remember_me_seconds = 864000
+
+
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.db.adapter = "PDO_MYSQL"
 resources.db.params.host = "localhost"
 resources.db.params.charset = "utf8"
-resources.db.params.dbname= "shop"
+resources.db.params.dbname= "zend"
 resources.db.params.username = "root"
 resources.db.params.password = ""
+
+resources.view[] =
+
 [staging : production]
 
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
+
 [development : production]
+
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
 
 
